using UnityEngine;

namespace LD52
{
    public static class AnimationNames
    {
        public static readonly int Attack = Animator.StringToHash("Attack");
        public static readonly int Death = Animator.StringToHash("Death");
        public static readonly int DirX = Animator.StringToHash("DirX");
        public static readonly int DirY = Animator.StringToHash("DirY");
    }
}